deploy/kubernetes/minio-gateway.yaml
#Replace myminio-hl.minio.svc.cluster.local with the actual service name of the MinIO tenant.
---
apiVersion: v1
kind: Namespace
metadata:
  name: minio
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: minio-gateway 
  namespace: minio
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: minio-gateway-envoy
  namespace: minio
data:
  envoy.yaml: |
    static_resources:
      listeners:
      - address:
          socket_address:
            address: 0.0.0.0
            port_value: 80
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              codec_type: AUTO
              stat_prefix: ingress_http
              upgrade_configs:
              - upgrade_type: websocket
              route_config:
                name: local_route
                virtual_hosts:
                - name: outbound_proxy
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: proxy-minio-minio
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

      clusters:
      - name: proxy-minio-minio
        type: STRICT_DNS
        connect_timeout: 2s
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: proxy-minio-minio
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: myminio-hl.minio.svc.cluster.local
                    port_value: 9000
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
            sni: minio.minio.svc.cluster.local
            common_tls_context:
              validation_context:
                trusted_ca: {filename: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt}

---
apiVersion: v1
kind: Service
metadata:
  name: minio-gateway
  namespace: minio
spec:
  ports:
  - name: http-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: minio-gateway
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-gateway
  namespace: minio
spec:
  replicas: 3
  selector:
    matchLabels:
      app: minio-gateway
  template:
    metadata:
      labels:
        app: minio-gateway
    spec:
      containers:
      - name: envoy
        image: bitnami/envoy:1.30.7
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /opt/bitnami/envoy/conf/
          name: envoy-config
          readOnly: true
      serviceAccount: minio-gateway 
      serviceAccountName: minio-gateway 
      volumes:
      - configMap:
          name: minio-gateway-envoy
        name: envoy-config
